--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.3",
     "firebase-admin": "^12.0.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.5"
