--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "argon2": "^0.31.2",
     "aws-sdk": "^2.1528.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
