--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-fileupload": "^1.4.3",
     "firebase-admin": "^12.0.0",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.6.5"
+    "mysql2": "^3.6.5",
+    "nodemailer": "^6.9.8"
   }
 }
