--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-fileupload": "^1.4.3",
     "firebase": "^10.8.1",
     "firebase-admin": "^12.0.0",
+    "greenlock-express": "^4.0.3",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.5",
     "nodemailer": "^6.9.8"
