--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "firebase": "^10.8.1",
     "firebase-admin": "^12.0.0",
     "greenlock-express": "^4.0.3",
+    "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
     "jsqr": "^1.4.0",
     "mysql2": "^3.6.5",
