--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "mysql2": "^3.6.5",
     "nodemailer": "^6.9.8",
     "random": "^4.1.0",
-    "supertest": "^6.3.4"
+    "supertest": "^6.3.4",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.2/xlsx-0.20.2.tgz"
+
   }
 }
